# txt2sql

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/: agent_systems.md  configuration.md  structured_logging.md
src/text_to_sql/: __init__.py  __main__.py  config.py
src/text_to_sql/agent/: dynamic_coordinator.py  llm_agents.py  main.py  router.py  types.py
src/text_to_sql/db/: base.py  postgres.py  schema.py
src/text_to_sql/llm/: engine.py  prompts.py  semantic.py
src/text_to_sql/scripts/: build_package.py  download_data.py  setup_db.py
src/text_to_sql/utils/: caching.py  config_types.py  logging.py  validation.py
src/text_to_sql/visualization/: app.py  app_router.py  app_with_agents.py  charts.py  dashboard.py  semantic.py
tests/: test_db_manager.py  test_llm_engine.py  test_schema.py
