[tool.poetry]
name = "text-to-sql"
version = "0.1.0"
description = "Natural language interface for SQL databases with visualization capabilities"
authors = ["Rushil Sheth <rushil.sheth@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "text_to_sql", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.9"
gradio = "^4.19.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
requests = "^2.31.0"
ipython = "^9.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"